[gd_scene load_steps=3 format=3 uid="uid://hltvfgbsr320"]

[ext_resource type="Script" path="res://ui/standalone/mainmenu/main_menu.gd" id="1"]
[ext_resource type="Theme" path="res://ui/assets/general/general_ui.tres" id="3"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3")
script = ExtResource("1")

[node name="LblVersion" type="Label" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "X.X.X"

[node name="BoxMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="BtnJoin" type="Button" parent="BoxMenu"]
layout_mode = 2
text = "Join"

[node name="BtnCreate" type="Button" parent="BoxMenu"]
layout_mode = 2
text = "Create"

[node name="BtnEditor" type="Button" parent="BoxMenu"]
layout_mode = 2
text = "Editor"

[node name="BtnBrowser" type="Button" parent="BoxMenu"]
layout_mode = 2
text = "Map Browser"

[node name="BtnProfile" type="Button" parent="BoxMenu"]
layout_mode = 2
text = "Profile"

[node name="BtnSettings" type="Button" parent="BoxMenu"]
layout_mode = 2
text = "Settings"

[node name="BtnLogout" type="Button" parent="BoxMenu"]
layout_mode = 2
text = "Logout"
