[gd_scene load_steps=14 format=2]

[ext_resource path="res://ui/standalone/mainmenu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://ui/assets/panels/metal_dark/panel_yellow_metal_dark.tres" type="StyleBox" id=2]
[ext_resource path="res://ui/assets/general/general_ui.tres" type="Theme" id=3]
[ext_resource path="res://ui/assets/icons/icon_leave.png" type="Texture2D" id=4]
[ext_resource path="res://ui/assets/fonts/data/kenney_thick.ttf" type="FontFile" id=5]
[ext_resource path="res://ui/assets/panels/metal_dark/panel_green_metal_dark.tres" type="StyleBox" id=6]
[ext_resource path="res://ui/assets/fonts/font_ui_small.tres" type="FontFile" id=7]
[ext_resource path="res://ui/assets/buttons/big/yellow/button_yellow_big.tres" type="Theme" id=8]
[ext_resource path="res://ui/assets/buttons/big/blue/button_blue_big.tres" type="Theme" id=9]
[ext_resource path="res://ui/assets/buttons/small/red/button_red_small.tres" type="Theme" id=10]
[ext_resource path="res://ui/assets/fonts/font_ui_title_small.tres" type="FontFile" id=11]
[ext_resource path="res://ui/assets/general/form_theme.tres" type="Theme" id=12]

[sub_resource type="FontFile" id=3]
font_data = ExtResource( 5 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ -68.0, -184.0 ],
"_edit_use_anchors_": false
}

[node name="BtnMatchmaking" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.4
anchor_right = 0.6
anchor_bottom = 0.6
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 8 )
text = "BATTLE"

[node name="BtnEditor" type="Button" parent="BtnMatchmaking"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 16.0
grow_horizontal = 2
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 3 )
disabled = true
text = "Editor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblEditorGuestHint" type="Label" parent="BtnMatchmaking/BtnEditor"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Create an Account to access the map editor"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelAccount" type="PanelContainer" parent="."]
custom_styles/panel = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelAccount"]
offset_left = 20.0
offset_top = 20.0
offset_right = 148.0
offset_bottom = 110.0
alignment = 1

[node name="LblGuest" type="Label" parent="PanelAccount/VBoxContainer"]
offset_right = 128.0
offset_bottom = 20.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.117647, 0.117647, 0.117647, 1 )
custom_fonts/font = ExtResource( 7 )
text = "GUEST"
align = 1

[node name="LblDisplayName" type="Label" parent="PanelAccount/VBoxContainer"]
offset_top = 24.0
offset_right = 128.0
offset_bottom = 42.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.117647, 0.117647, 0.117647, 1 )
custom_fonts/font = ExtResource( 11 )
text = "LOADING..."
align = 1

[node name="LblPlayCount" type="Label" parent="PanelAccount/VBoxContainer"]
offset_top = 46.0
offset_right = 128.0
offset_bottom = 66.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.117647, 0.117647, 0.117647, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Played: 0"

[node name="LblWinCount" type="Label" parent="PanelAccount/VBoxContainer"]
offset_top = 70.0
offset_right = 128.0
offset_bottom = 90.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.117647, 0.117647, 0.117647, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Won: 0"

[node name="BtnLogout" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_bottom = -4.0
grow_vertical = 0
tooltip_text = "Logout"
theme = ExtResource( 10 )
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerMaps" type="ScrollContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.95
offset_left = -300.0
offset_right = 16.0
custom_styles/panel = ExtResource( 2 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoxMapCards" type="VBoxContainer" parent="ContainerMaps"]
offset_left = 20.0
offset_top = 20.0
offset_right = 296.0
offset_bottom = 86.0
pivot_offset = Vector2( -997, 248 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ContainerMaps/BoxMapCards"]
offset_right = 276.0
offset_bottom = 18.0
size_flags_vertical = 1
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 11 )
text = "MAPS"
align = 1
autowrap = true

[node name="LineEdit" type="LineEdit" parent="ContainerMaps/BoxMapCards"]
offset_top = 22.0
offset_right = 276.0
offset_bottom = 48.0
theme = ExtResource( 12 )
clear_button_enabled = true
placeholder_text = "Search for Map ID or Name"

[node name="LblLoading" type="Label" parent="ContainerMaps/BoxMapCards"]
offset_top = 52.0
offset_right = 276.0
offset_bottom = 66.0
size_flags_vertical = 6
text = "Loading..."
align = 1
valign = 1

[node name="LblVersion" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "X.X.X"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
offset_left = -1.0
offset_top = 272.0
offset_right = 305.0
offset_bottom = 356.0
custom_colors/font_color = Color( 0.666667, 0, 0, 1 )
custom_fonts/font = ExtResource( 11 )
text = "This is an early alpha build. incomplete and potentially buggy"
autowrap = true

[connection signal="pressed" from="BtnMatchmaking" to="." method="_on_BtnMatchmaking_pressed"]
[connection signal="pressed" from="BtnMatchmaking/BtnEditor" to="." method="_on_BtnEditor_pressed"]
[connection signal="pressed" from="BtnLogout" to="." method="_on_BtnLogout_pressed"]
[connection signal="text_changed" from="ContainerMaps/BoxMapCards/LineEdit" to="." method="_on_LineEdit_text_changed"]
